--- a/.gitignore
+++ b/.gitignore
@@ -167,4 +167,5 @@ gradle-app.setting
 # Java heap dump
 *.hprof
 
+.idea
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle
